--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{header :: head-common}"></head>
+<head th:replace="~{/common/header :: head-common}"></head>
 <body>
 <!-- 헤더 포함 -->
-<div th:replace="~{header :: top-banner}"></div>
+<div th:replace="~{/common/header :: top-banner}"></div>
 
 <div class="error-container">
     <div class="error-content server-500">
         <div class="error-code">500</div>
-        <h1 th:text="#{error.500.content}">Internal Server Error</h1>
+        <h1>Internal Server Error</h1>
         <p class="error-message">Something went wrong on our side. Please try again later.</p>
 
         <!-- 기술적 문제 설명 -->
@@ -25,6 +25,6 @@
 </div>
 
 <!-- 푸터 포함 -->
-<div th:replace="~{footer :: footer}"></div>
+<div th:replace="~{/common/footer :: footer}"></div>
 </body>
 </html>
