--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{header :: head-common}">
+<head>
+  <div th:replace="~{/common/header :: head-common}"></div>
+  <link rel="stylesheet" th:href="@{/css/components/register.css}">
   <!-- Daum Postcode API Script 추가 -->
   <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
 <body>
 <!-- 헤더 포함 -->
-<div th:replace="~{header :: top-banner}"></div>
+<div th:replace="~{/common/header :: top-banner}"></div>
 
 <main class="main-content form-page">
   <section class="form-section">
@@ -200,9 +202,7 @@
 </main>
 
 <!-- 푸터 포함 -->
-<div th:replace="~{footer :: footer}"></div>
+<div th:replace="~{/common/footer :: footer}"></div>
 
-<!-- 테마 스크립트 -->
-<div th:replace="~{header :: theme-script}"></div>
 </body>
 </html>
